More assembly docs

--- a/assets/doc-header.html
+++ b/assets/doc-header.html
@@ -17,3 +17,8 @@
         });
     });
 </script>
+
+$$ \gdef\pd#1#2{\frac{\partial #1}{\partial #2}}
+    \gdef\d#1{\, \mathrm{d}#1}
+    \gdef\dx{\d{x}}
+$$
