Improve naming and docs for error estimation functions

--- a/assets/doc-header.html
+++ b/assets/doc-header.html
@@ -22,3 +22,8 @@ $$ \gdef\pd#1#2{\frac{\partial #1}{\partial #2}}
     \gdef\d#1{\, \mathrm{d}#1}
     \gdef\dx{\d{x}}
 $$
+
+$$
+\gdef\norm#1{\left \lVert #1 \right\rVert}
+\gdef\seminorm#1{| #1 |}
+$$
