Test multi contraction for linear elastic material

--- a/assets/doc-header.html
+++ b/assets/doc-header.html
@@ -21,6 +21,7 @@
 $$ \gdef\pd#1#2{\frac{\partial #1}{\partial #2}}
     \gdef\d#1{\, \mathrm{d}#1}
     \gdef\dx{\d{x}}
+    \gdef\tr#1{\operatorname{tr} (#1)}
 $$
 
 $$
